# G-day-1

./: .gitignore  README.md
OpenCV-Practise/Exercise1/: main.cpp
OpenCV-Practise/Exercise2/: crud.cpp  crud.h  main.cpp  newl.db
OpenCV-Practise/MyHistogram/: main.cpp
OpenCV-Practise/crudFunctions/: CMakeLists.txt  circleDetection.db  newl.db
OpenCV-Practise/heapSort/: CMakeLists.txt  main.cpp
OpenCV-Practise/myFirstOpencvExercise/: CMakeLists.txt
week-01/day-2/12alot/: CMakeLists.txt  main.cpp
week-01/day-2/BodyMass/: CMakeLists.txt  main.cpp
week-01/day-2/CodingHours/: main.cpp
week-01/day-2/Cuboid/: main.cpp
week-01/day-2/DBI/: CMakeLists.txt  main.cpp
week-01/day-2/HelloMe/: main.cpp
week-01/day-2/IntroMe/: CMakeLists.txt  main.cpp
week-01/day-2/Seconds/: CMakeLists.txt  main.cpp
week-01/day-2/Swap/: main.cpp
week-01/day-2/TwoNums/: CMakeLists.txt  main.cpp
week-01/day-2/VariableMutation/: main.cpp
week-01/day-2/aaaaaaaaaaa/: CMakeLists.txt  main.cpp
week-01/day-2/animalslegs/: CMakeLists.txt  main.cpp
week-01/day-2/average/: CMakeLists.txt  main.cpp
week-01/day-2/drawChess/: CMakeLists.txt  main.cpp
week-01/day-2/drawtriangle/: main.cpp
week-01/day-2/hellouser/: main.cpp
week-01/day-2/miletokm/: CMakeLists.txt  main.cpp
week-01/day-2/oddeven/: main.cpp
week-01/day-2/paraverage/: CMakeLists.txt  main.cpp
week-01/day-2/partyindicator/: main.cpp
week-02/day-1/append/: main.cpp
week-02/day-1/arraysfunctions/: CMakeLists.txt  main.cpp
week-02/day-1/change/: CMakeLists.txt  main.cpp
week-02/day-1/compare/: CMakeLists.txt  main.cpp
week-02/day-1/doubling/: main.cpp
week-02/day-1/greet/: main.cpp
week-02/day-1/increment/: CMakeLists.txt  main.cpp
week-02/day-1/print/: CMakeLists.txt  main.cpp
week-02/day-1/sum/: main.cpp
week-02/day-1/teaching/: CMakeLists.txt  main.cpp
week-02/day-1/third/: main.cpp
week-02/day-2/hewillnever/: main.cpp
week-02/day-2/practicegg/: CMakeLists.txt  main.cpp
week-02/day-2/reverse/: main.cpp
week-02/day-2/reverse2/: CMakeLists.txt  main.cpp
week-02/day-2/simplereplace/: CMakeLists.txt  main.cpp
week-02/day-2/solar/: CMakeLists.txt  main.cpp
week-02/day-2/takeslonger/: main.cpp
week-02/day-2/todo/: main.cpp
week-02/day-2/url/: CMakeLists.txt  main.cpp
week-02/day-3/appenda/: main.cpp
week-02/day-3/diagonal/: CMakeLists.txt  main.cpp
week-02/day-3/lol/: CMakeLists.txt
week-02/day-3/nix/: CMakeLists.txt  main.cpp
week-03/day1/MaterialReview/: CMakeLists.txt
week-03/day2/FiveNums/: CMakeLists.txt  main.cpp
week-03/day2/Look4Max/: CMakeLists.txt  main.cpp
week-03/day2/LookForNum/: CMakeLists.txt  main.cpp
week-03/day2/PrintAddresses/: CMakeLists.txt  main.cpp
week-03/day2/adding/: main.cpp
week-03/day2/fff/: CMakeLists.txt
week-03/day2/pointerType/: CMakeLists.txt  main.cpp
week-03/day3/ColoredBox/: CMakeLists.txt  main.cpp
week-03/day3/Diagonal/: CMakeLists.txt  main.cpp
week-04/HOMEofficeday5/vectors/elementfinder/: CMakeLists.txt  main.cpp
week-05/day2/GForg/: CMakeLists.txt  cohort.cpp  cohort.h  main.cpp  mentor.cpp  mentor.h  person.cpp  person.h  sponsor.cpp  sponsor.h  student.cpp  student.h
week-05/day3/strinstr/: CMakeLists.txt  bassguitar.cpp  bassguitar.h  electricguitar.cpp  electricguitar.h  instrument.h  main.cpp  stringedinstrument.h  violin.cpp  violin.h
week-06/Practise/petrolstation/: CMakeLists.txt  car.cpp  car.h  main.cpp  station.cpp  station.h
week-08/poker/: CMakeLists.txt
week-08/structures_and_costum_types/car/: CMakeLists.txt  main.c
week-08/structures_and_costum_types/car_register/: CMakeLists.txt  main.c
week-08/structures_and_costum_types/house/: CMakeLists.txt  main.c
week-09/STM32F7 - 1st/: main.c
week-09/STM32F7 - 2nd/: main.c
week-09/STM32F7 - 3rd/: main.c
week-10/Read_from_TEXT/: CMakeLists.txt  main.c  most_words.c  most_words.h  my_file.txt
week-10/STM32F7 - 4th project/: main.c
week-10/STM32F7 - 5th project/: main - interrupts EX 1-3.c
week-10/STM32F7_BASE/: main.c
week-10/STM32F7_CALCULATOR_W_BLUE_BUTTON/: main.c
week-10/STM32F7_LED_BLINKING_GAME/: main.c
week-10/STM32F7_RAILWAY_HALF/: main_half_solution.c
week-12/Gardening/: flower.cpp  flower.h  garden.cpp  garden.h  plants.cpp  plants.h  tree.cpp  tree.h
week-12/Pirates/: pirate.cpp  pirate.h
(+371 files in other folders)
